logs/Slang/generated/keywords/5.6.2--keyword_within.sv.log
name: keyword_within
description: The 'within' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_within.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_within.sv:8:8: error: expected declarator
    bit within;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_within.sv:8:9: error: expected member
    bit within;
        ^~~~~~
